--- a/index.html
+++ b/index.html
@@ -2,26 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exeter22</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header class="header">
-        <!-- Replaced title with new logo image -->
-        <img src="https://i.ibb.co/0cRpjhN/exeter22-cropped.jpg" alt="Exeter22 Logo" style="width: 100%; max-width: 600px;">
-    </header>
-    <main class="main">
-        <img src="https://i.ibb.co/FgNq6Yp/0332bb3b-7cc4-4b18-98b1-f04a5b867d88.jpg" alt="Wall Street 1990s">
-        <p>Exeter22 is a quantitative investment firm.</p>
-    </main>
-    <footer class="footer">
-        <p>&copy; 2024 Exeter22. All Rights Reserved.</p>
-        <p>Contact us at info@exeter22.com</p>
-    </footer>
+    <div class="content">
+        <div class="logo-container">
+            <img src="https://i.postimg.cc/90bMdbD5/93226653539.png" alt="Exeter22 Logo" class="center-logo">
+            <div class="logo-line"></div> <!-- Black line under the logo -->
+            <img src="https://i.postimg.cc/6qjZ9M65/large-transformed.jpg" alt="Background Image" class="background-image">
+        </div>
+        <footer>
+            <p><a href="mailto:contact@exeter22.com">contact@exeter22.com</a></p> <!-- Updated email and link -->
+            <div class="footer-line"></div>
+            <p>&copy; 2024 Exeter22. All Rights Reserved.</p>
+        </footer>
+    </div>
 </body>
 </html>
